--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
 matplotlib
-git+git://github.com/duke-lungmap-team/lung-map-utils-extra.git
-git+git://github.com/duke-lungmap-team/lung-map-utils.git
+numpy
+scikit-image
+scikit-learn
+tensorflow
+keras
+Pillow
+opencv-python
